# bazel-golang-examples

./: README.md
01_hello/: README.md  WORKSPACE
02_hello_lib/: BUILD  README.md
02_hello_lib/cmd/: BUILD  hello.go
02_hello_lib/hello/: BUILD  hello.go
03_gazelle/: BUILD  BUILD.bazel  README.md  WORKSPACE
03_gazelle/cmd/: BUILD.bazel
03_gazelle/src/: BUILD.bazel
03_gazelle/src/hello/: BUILD.bazel
03_gazelle/src/hello/cmd/: BUILD.bazel  main.go
04_goget/: BUILD  README.md  WORKSPACE  redis.go
05_protobuf/: README.md  WORKSPACE
05_protobuf/cmd/: BUILD  hello.go
05_protobuf/proto/: BUILD  greet.proto
06_grpc/: README.md  WORKSPACE
06_grpc/cmd/: BUILD  client.go  server.go
06_grpc/proto/helloworld/: BUILD  helloworld.proto
07_go_image/: BUILD  README.md  WORKSPACE  hello.go
